--- a/theme/snippets/jumplink-shopping-cart-body.liquid
+++ b/theme/snippets/jumplink-shopping-cart-body.liquid
@@ -30,7 +30,7 @@
       {% comment %} Total price an buy button {% endcomment %}
       <div class="row" rv-hide="cart.item_count | eq 0">
         <div class="col-auto d-flex flex-column justify-content-center">
-          <strong rv-i18n-text="'cart.items'" rv-data-count="cart.item_count">
+          <strong rv-i18n-text="'cart.items'" data-count="{{cart.item_count}}" rv-data-count="cart.item_count">
           </strong>
           <p class="my-0" rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
           <p class="mb-0 mt-1" rv-i18n-html="'cart.info_html'">
