--- a/theme/snippets/jumplink-form-returns.liquid
+++ b/theme/snippets/jumplink-form-returns.liquid
@@ -76,7 +76,7 @@
 
       <div class="custom-control custom-checkbox mt-5 mb-1">
         <input type="checkbox" class="custom-control-input" name="contact[privacy]" id="{{ idPrefix }}AcceptPrivacy" required>
-        <label class="custom-control-label" for="{{ idPrefix }}AcceptPrivacy"
+        <label class="custom-control-label small" for="{{ idPrefix }}AcceptPrivacy"
           rv-i18n-html="'legals.privacy_policy.checkbox_contact_label_html'"
         >
           {{'legals.privacy_policy.checkbox_contact_label_html'|t}}
