--- a/theme/sections/one-storie.liquid
+++ b/theme/sections/one-storie.liquid
@@ -19,19 +19,15 @@
 {% endif %}
 
 {% assign block_length = section.blocks | size %}
-{% if block_length <= 1 %}
-  {% assign ratioClass = "ratio-3-2" %}
-  {% assign imageSize = "master" %}
-{% else %}
-  {% assign ratioClass = "ratio-3-4" %}
-  {% assign imageSize = "master" %}
-{% endif %}
+{% assign imageSize = "master" %}
 
 <a rv-route="'{{ section.settings.story }}'" href="{{section.settings.story}}" rv-shopify-section='{{ section.settings | json }}' class="d-block container-fluid position-relative" style="background-color: {{ section.settings.color }};">
   <div class="row">
     {% for block in section.blocks %}
-
-      {% assign contentBoxClass = ratioClass %}
+      
+      {% assign ratioClass = "ratio-" | append: block.settings.aspect_ratio %}
+      {% assign ratioClassMD = "ratio-md-" | append: block.settings.aspect_ratio_md %}
+      {% assign contentBoxClass = ratioClass | append: ' ' | append: ratioClassMD %}
 
       {% if block.settings.spacing > 0 %}
         {% assign imageHasSpacing = true %}
@@ -178,9 +174,157 @@
         "type": "image",
         "settings": [
           {
+            "type":      "header",
+            "content":   "Image"
+          },
+          {
             "type": "image_picker",
             "id": "image",
             "label": "Image"
+          },
+          {
+            "type": "select",
+            "id": "aspect_ratio",
+            "label": "Aspect ratio (Smartphone)",
+            "options": [
+              {
+                "value": "1-1",
+                "label": "1:1"
+              },
+              {
+                "value": "3-2",
+                "label": "3:2 (default)"
+              },
+              {
+                "value": "2-3",
+                "label": "2:3"
+              },
+              {
+                "value": "2-1",
+                "label": "2:1"
+              },
+              {
+                "value": "1-2",
+                "label": "1:2"
+              },
+              {
+                "value": "4-3",
+                "label": "4:3"
+              },
+              {
+                "value": "3-4",
+                "label": "3:4"
+              },
+              {
+                "value": "16-9",
+                "label": "16:9"
+              },
+              {
+                "value": "9-16",
+                "label": "9:16"
+              },
+              {
+                "value": "10-3",
+                "label": "10:3"
+              },
+              {
+                "value": "3-10",
+                "label": "3:10"
+              },
+              {
+                "value": "17-10",
+                "label": "17:10"
+              },
+              {
+                "value": "10-17",
+                "label": "10:17"
+              },
+              {
+                "value": "14-9",
+                "label": "14:9"
+              },
+              {
+                "value": "9-14",
+                "label": "9:14"
+              }
+            ],
+            "default": "3-2"
+          },
+          {
+            "type": "select",
+            "id": "aspect_ratio_md",
+            "label": "Aspect ratio (Desktop)",
+            "options": [
+              {
+                "value": "none",
+                "label": "None (use the smartphone ratio)"
+              },
+              {
+                "value": "1-1",
+                "label": "1:1"
+              },
+              {
+                "value": "3-2",
+                "label": "3:2 (default)"
+              },
+              {
+                "value": "2-3",
+                "label": "2:3"
+              },
+              {
+                "value": "2-1",
+                "label": "2:1"
+              },
+              {
+                "value": "1-2",
+                "label": "1:2"
+              },
+              {
+                "value": "4-3",
+                "label": "4:3"
+              },
+              {
+                "value": "3-4",
+                "label": "3:4 (use this for 2 images side by side)"
+              },
+              {
+                "value": "16-9",
+                "label": "16:9"
+              },
+              {
+                "value": "9-16",
+                "label": "9:16"
+              },
+              {
+                "value": "10-3",
+                "label": "10:3"
+              },
+              {
+                "value": "3-10",
+                "label": "3:10"
+              },
+              {
+                "value": "17-10",
+                "label": "17:10"
+              },
+              {
+                "value": "10-17",
+                "label": "10:17"
+              },
+              {
+                "value": "14-9",
+                "label": "14:9"
+              },
+              {
+                "value": "9-14",
+                "label": "9:14"
+              }
+            ],
+            "default": "none"
+          },
+          {
+            "type":      "header",
+            "content":   "Video"
           },
           {
             "id": "video_url",
@@ -198,6 +342,10 @@
             "id": "video_poster",
             "type": "image_picker",
             "label": "Video Poster image"
+          },
+          {
+            "type":      "header",
+            "content":   "Spacings"
           },
           {
             "type":   "range",
