Fix page translation content

--- a/theme/templates/page.privacy.liquid
+++ b/theme/templates/page.privacy.liquid
@@ -4,7 +4,7 @@
       <div class="col-12 col-md-8 offset-md-2 col-lg-8 col-xl-6 scrollbar-x-auto rte" rv-i18n-html="">
         {{page.content}}
         <template lang="default">{{page.content}}</template>
-        <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+        <template lang="de">{{page.content}}</template>
       </div>
     {% endunless %}
 
