--- a/theme/templates/page.legals.liquid
+++ b/theme/templates/page.legals.liquid
@@ -4,7 +4,7 @@
         <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte" rv-i18n-html="">
           {{page.content}}
           <template lang="default">{{page.content}}</template>
-          <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+          <template lang="de">{{page.content}}</template>
         </div>
     {% endunless %}
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
