--- a/theme/snippets/jumplink-article-list-item.liquid
+++ b/theme/snippets/jumplink-article-list-item.liquid
@@ -18,6 +18,10 @@
   {% assign video = article.metafields["global"]["video-vimeo-1"] %}
   {% assign videoType = 'vimeo' %}
 {% endif %}
+{% if article.metafields["global"]["video-youtube-1"] %}
+  {% assign video = article.metafields["global"]["video-youtube-1"] %}
+  {% assign videoType = 'youtube' %}
+{% endif %}
 {% if article.metafields["global"]["video-poster-1"] %}
   {% assign videoPoster = article.metafields["global"]["video-poster-1"] %}
 {% endif %}
