--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -53,7 +53,7 @@
     {% include 'jumplink-navigation' %}
   </div>
 
-  <div rv-view='{"listenAllLinks": true, "datasetToModel": true}' id="main">
+  <div rv-view='{"listenAllLinks": false, "datasetToModel": true}' id="main">
     <div {% include 'jumplink-utils-barba-container-attributes', parseCollection: true %}>
       {{ content_for_layout }}
     </div>
