[i18n] Fix locales switcher

--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -149,7 +149,7 @@
           </a>
         </li>
 
-        <rv-i18n-switcher rv-show="menuOpen">
+        <tda-i18n-switcher rv-show="menuOpen">
            <li class="nav-item" rv-each-langcode="langcodes">
             <div
               class="nav-link text-uppercase"
@@ -158,7 +158,7 @@
               rv-class-active="langcode.active"
             ></div>
            </li>
-        </rv-i18n-switcher>
+        </tda-i18n-switcher>
 
         <shopify-linklist rv-show="menuOpen" class="" id="toggle-menu" name="toggle-menu" vertical="false" pills="false"></shopify-linklist>
 
