Added Section for Live-Chat and removed top Teaser text

--- a/src/scss/templates/_navigation.scss
+++ b/src/scss/templates/_navigation.scss
@@ -11,7 +11,13 @@
   }
 }
 
-.logo-text-sm {
+
+.logo-text {
+  background-color: transparent;
+  user-select: none;
+}
+
+.logo-text-top {
   letter-spacing: .1rem;
   font-weight: bold;
   font-size: 0.9rem;
