--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -67,6 +67,8 @@
 
   {% section 'cookie-banner' %}
 
+  {% section 'live-chat' %}
+
   <script type="application/ld+json">
   {
     "@context": "http://schema.org",
