--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -9,8 +9,8 @@
          
         <ul class="nav pointer-events-all">
           <li class="nav-item">
-            <div class="nav-text" rv-i18n-text="'snippets.navigation.teaser_text'">
-              {{'snippets.navigation.teaser_text'|t}}
+            <div class="nav-text">
+              &nbsp;
             </div>
           </li>
         </ul>
@@ -179,6 +179,6 @@
 </div>
 
 {% comment %} Navigation Smartphone {% endcomment %}
-<div class="container-fluid fixed-top pointer-events-none d-block d-lg-none text-center logo-text logo-text-sm">
-  <a class="pointer-events-all" rv-route-class-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
+<div class="container-fluid fixed-top pointer-events-none d-block text-center logo-text logo-text-top">
+  <a class="pointer-events-all text-primary" rv-route-class-active="'/'" rv-route="'/'" href="/">FASSBENDER</a>
 </div>
