--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -174,6 +174,10 @@
   border: 1px solid $custom-control-indicator-checked-color;
 }
 
+.custom-control-input:checked ~ .custom-control-label::before {
+  border: none;
+}
+
 // Disable arrows in number field
 input[type=number]::-webkit-outer-spin-button, 
 input[type=number]::-webkit-inner-spin-button {
