--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -3,6 +3,7 @@ html, body {
     height: auto;
     min-height: 100%;
     width: 100%;
+    // padding-bottom: 0 !important; // disable padding from shopify admin bar
 }
 
 
